footer bug fixed- both flex-row elements are now aligned to top of flex container

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -12,11 +12,11 @@
         width: 15rem;
         height: auto;
     }
-    
+
     &__row{
         display: flex;
         justify-content: space-around;
-        align-items: center;
+        align-items: flex-start;
         flex-wrap: wrap;
     }
 
